objects/nFORCE__Feature__mdt.object
<CustomObject>
    <description>Lists the business components available for configuration and consumption.</description>
    <fields>
        <fullName>nFORCE__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean which indicates whether a feature is available (true) or unavailable (false) to be installed and configured. (deprecated - use Is_Active)</description>
        <label>-D Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>Short paragraph delineating the business processes and capabilities provided in this feature.</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Developer_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the feature should automatically enabled when the package is installed.</description>
        <label>Developer Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Developer_Permitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the feature can be enabled without additional authorization.</description>
        <label>Developer Permitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean which indicates whether a feature is available (true) or unavailable (false) to be installed and configured.</description>
        <label>Is_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__LMO_Enabled__c</fullName>
        <description>The field is optional. The field specifies Subscriber to LMO Salesforce Feature Parameter that is associated with the feature. If specified the feature parameter will be updated to reflect the current state of the feature. The fully qualified name of the parameter should be used, for example NAMESPACE__FEATUREPARAMETER.</description>
        <label>Enabled Feature Parameter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__LMO_Permitted__c</fullName>
        <description>The field is optional. The field specifies the LMO to Subscriber Salesforce Feature Parameter that is associated with the feature. If specified the feature parameter will used to determine if the feature is permitted. The fully qualified name of the parameter should be used, for example NAMESPACE__FEATUREPARAMETER.</description>
        <label>Permitted Feature Parameter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Major_Version__c</fullName>
        <description>This field indicates the current Major Version of the feature.</description>
        <label>Major Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Minor_Version__c</fullName>
        <description>This field indicates the current Minor Version of the feature.</description>
        <label>Minor Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Feature_Name__c</fullName>
        <description>The field is optional. It indicates the developer name of the parent feature. A parent feature must be enabled before a feature can be enabled.</description>
        <label>Parent Feature Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Patch_Version__c</fullName>
        <description>This field indicates the current Patch Version of the feature.</description>
        <label>Patch Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Terms_Conditions__c</fullName>
        <description>For your custom feature, enter specific terms &amp; conditions that users must accept to continue.</description>
        <label>Custom Terms &amp; Conditions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Version__c</fullName>
        <description>-DEPRECATED- Deprecated field, no longer in use.</description>
        <inlineHelpText>-DEPRECATED-</inlineHelpText>
        <label>-D Version</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Feature</label>
    <pluralLabel>Features</pluralLabel>
</CustomObject>